--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test github</title>
     <link rel="stylesheet" href="index.css" />
+    <script src="script.js"></script>
   </head>
   <body>
-    <header>Header</header>
-    <main>Body</main>
-    <footer>footer</footer>
+    <h1>Hello world</h1>
+    <h2>Hello WMAD</h2>
   </body>
 </html>
-# Learn-Git-Github
-# Learn-Git-Github
